--- a/ApiClientFabric/FetchData/FetchData.csproj
+++ b/ApiClientFabric/FetchData/FetchData.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.ServiceFabric.Services" Version="4.2.457" />
+    <PackageReference Include="Microsoft.ServiceFabric.Services.Remoting" Version="4.2.457" />
   </ItemGroup>
 
 </Project>
